--- a/week2/style.css
+++ b/week2/style.css
@@ -31,37 +31,43 @@ b {
     color:lightcoral;
 }
 
-/* "YOU MAY ALSO LIKE" line height & turned Uppercase */
-#paraFive {
-    line-height: 20px;
-    text-transform:uppercase;
-}
-
 /* iamage location & margin thickness */
 img {
     float: left;
-    margin: 15px;
+    margin: 12px;
 }
 
 /* p1 line height */
-.paraOne {
+.p1 {
     line-height: 20px;
 }
 
 /* p2 line height */
-.paraTwo {
+.p2 {
     line-height: 20px;
 }
 
 /* p3 line height */
-.paraThree {
+.p3 {
     line-height: 20px;
 }
 
 /* p4 line height */
-.paraFour {
+.p4 {
     line-height: 20px;
 }
+
+/* list edit */
+#list {
+    margin: 8px;
+}
+
+/* "YOU MAY ALSO LIKE" line height & turned Uppercase */
+#p5 {
+    line-height: 20px;
+    text-transform:uppercase;
+}
+
 
 /* link edit: removal of underline & hover underline incorporated */
 a {
@@ -72,12 +78,3 @@ a {
 a:hover {
     text-decoration: underline;
 }
-
-/* list edit: location & conjoined with p5 title of the list */
-div, img {
-    float:inherit
-    float:left
-    resize: both;
-    overflow: auto;
-}
-
