--- a/week2/style.css
+++ b/week2/style.css
@@ -42,11 +42,11 @@ b {
 img {
     display: block;
     float:left;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 /* changing ol list into ul */
-ol {
+#list {
     display: inline-block;
     list-style-type: disc;
 }
