--- a/week3/mystyle.css
+++ b/week3/mystyle.css
@@ -14,31 +14,34 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border: 6px solid bisque;
     margin-top: 40px;
     width: 40%;
 }
 
 table {
-      display: block;
-    margin-left: 120px;
+    text-align: center;
+    margin-left: auto;
     margin-right: auto;
     margin-top: 40px;
     width: 40%;
-    
-    text-align: center;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-style: italic;
     font-size: large;
 }
 
-#myTitle {
+#myTitles {
     color: lightsalmon;
+    font-size: x-large;
 }
 
 #inner {
     color:bisque;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size:medium;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
 
 .mylink {
