--- a/week3/style2.css
+++ b/week3/style2.css
@@ -8,13 +8,21 @@ a {
     float: left;
     font-style: italic;
     font-weight: bold;
+    margin-right: 6px;
 }
 a:hover {
     text-decoration: line-through;
 }
 
 
-table {
+#table1 {
+    background-color: bisque;
+    font-size: medium;
+    margin: 5px;
+    border: 4px solid black;
+}
+
+#table2 {
     background-color: bisque;
     font-size: medium;
     margin: 5px;
@@ -35,12 +43,21 @@ table {
 #inner {
     color: bisque;
     background-color:indianred;
+    margin: 20px;
+    text-align: center;
+}
+
+#td1, #td2, #td3 {
+    color:darkslategrey
 }
 
 b {
     color:tomato;
 }
 
+i {
+    color:darkcyan;
+}
 
 header {
     color: blue;
@@ -56,4 +73,8 @@ h3 {
 
 p {
     color: darkslategray;
+}
+
+#bottom {
+    color:royalblue;
 }
