--- a/week3/UHC/style.css
+++ b/week3/UHC/style.css
@@ -14,23 +14,20 @@ a:hover {
     text-decoration: line-through;
 }
 
-
 #table1 {
     background-color: bisque;
     font-size: medium;
-    margin: 5px;
-    border: 4px solid black;
     margin-left: auto;
     margin-right: auto;
+    border: 4px solid black;
 }
 
 #table2 {
     background-color: bisque;
     font-size: medium;
-    margin: 5px;
-    border: 4px solid black;
     margin-left: auto;
     margin-right: auto;
+    border: 4px solid black;
 }
 
 #title {
@@ -84,7 +81,7 @@ header, h2, h3, p {
     font-family: cursive;
 }
 
-header, h2, {
+header, h2 {
     text-align: center;
 }
 
