--- a/week4/project2/project.css
+++ b/week4/project2/project.css
@@ -35,7 +35,7 @@ a:hover {
     font-weight: bolder;
     margin-bottom: 2px;
     text-align: center;
-    font-family: cursive;
+    font-family: 'Courgette', cursive;
 }
 
 .myTitles {
@@ -80,7 +80,7 @@ p, span {
 }
 
 header, h2, h3, p, span {
-    font-family: cursive;
+    font-family: 'Courgette', cursive;
 }
 
 header, h2 {
