--- a/week6/Pseudo/style.css
+++ b/week6/Pseudo/style.css
@@ -120,6 +120,7 @@
     box-shadow: 10px 10px 20px inset #527a79; 
     font-family: 'Meie Script', cursive;
     color: #43646933; 
+    margin-top: 200px;
 }
 
 
