--- a/week5/resp web des p2/styles2.css
+++ b/week5/resp web des p2/styles2.css
@@ -3,19 +3,17 @@
     padding: 0;
 }
 
-#grid-container {
+#myPage {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-auto-rows: minmax(15vh, auto );
     grid-gap: 15px;
-    color: white;
-   
 }
 
 
 @media only screen and (max-width: 767px) {
 
-.header {
+header {
     font-size: 40px;
     background-color: grey;
     grid-column: 1/5;
@@ -23,21 +21,25 @@
    
     }
 
-.sidebar {
+#liberal {
     font-size: 40px;
     background-color: rgb(59, 59, 59);
     grid-column: 1/5;
     border-radius: 8px;
+
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
 }
 
-.content {
+#why {
     font-size: 20px;
     background-color:  rgb(59, 59, 59);
     grid-column: 1/5;
     border-radius: 8px;
 }
 
-.sidebar2 {
+table {
     font-size: 40px;
     color: black;
     background-color: lightgray;
@@ -45,7 +47,7 @@
     border-radius: 8px;
 }
 
-.footer {
+footer {
     font-size: 40px;
     background-color: grey;
     grid-column: 1/5;
@@ -58,32 +60,32 @@
 
 
 
-.header {
+header {
     background-color: grey;
     grid-column: 1/5;
     border-radius: 8px;
        
     }
     
-.sidebar {
+#liberal {
     background-color: rgb(59, 59, 59);
     grid-column: 1/2;
     border-radius: 8px;
     }
     
-.content {
+#why {
     background-color:  rgb(59, 59, 59);
     grid-column: 2/5;
     border-radius: 8px;
     }
     
-.sidebar2 {
+table {
     background-color: lightgray;
     grid-column: 1/5;
     border-radius: 8px;
     }
     
-.footer {
+footer {
     background-color: grey;
     grid-column: 1/5;
     border-radius: 8px;
@@ -94,32 +96,32 @@
 @media only screen and  (min-width: 1024px) and (max-width: 1366px){
 
 
-.header {
+header {
     background-color: grey;
     grid-column: 1/5;
     border-radius: 8px;
           
     }
     
-.sidebar {
+#liberal {
     background-color: rgb(59, 59, 59);
     grid-column: 1/2;
     border-radius: 8px;
     }
     
-.content {
+#why {
     background-color:  rgb(59, 59, 59);
     grid-column: 2/4;
     border-radius: 8px;
     }
     
-.sidebar2 {
+table {
     background-color: lightgray;
     grid-column: 4/5;
     border-radius: 8px;
     }
     
-.footer {
+footer {
     background-color: grey;
     grid-column: 1/5;
     border-radius: 8px;
