--- a/week5/resp web des p2/styles.css
+++ b/week5/resp web des p2/styles.css
@@ -7,8 +7,8 @@
 #grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: minmax(28vh, auto);
-    grid-gap: 10px;
+    grid-auto-rows: minmax(10vh, auto);
+    grid-gap: 15px;
 
 }
 
@@ -48,7 +48,7 @@
 
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
 
 
 .red {
@@ -66,17 +66,21 @@
 
 .green {
     grid-column: 3/5;
+    grid-row: 2/4;
     height: 175px;
 }
 
 .purple {
     grid-column: 3/4;
-    height: 190px;
+    grid-row: 3/4;
+    height: 200px;
 }
 
 .yellow {
-    background-color: rgb(124, 95, 145);
+    background-color: rgb(224, 243, 154);
     grid-column: 4/5;
+    grid-row: 3/4;
+
 
 }
 
