--- a/week7/DACA/daca.css
+++ b/week7/DACA/daca.css
@@ -11,23 +11,24 @@
 
 /* HEADER */
 .header {
-border: 17px solid;
-border-image: url(marble.jpg) 30;
-background-image: url(please.jpg);
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center;
-box-shadow: 10px 33px 83px 60px rgba(0, 0, 0, 0.7);
+  border: 17px solid;
+  border-image: url(marble.jpg) 30;
+  background-image: url(daca.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 10px 33px 83px 60px rgba(0, 0, 0, 0.7);
 
-text-shadow: 15px 18px rgba(24, 24, 24, 0.26);
-font-family: 'Lavishly Yours', cursive;
-text-align: center;
+  text-shadow: 15px 18px rgba(233, 226, 226, 0.336);
+  font-family: 'Lavishly Yours', cursive;
+  text-align: center;
 
-color: rgb(255, 0, 0);
+  color: rgb(248, 159, 159);
 }
 
 #matter {
-color: rgb(255, 0, 0);
+  text-shadow: 15px 18px rgba(233, 226, 226, 0.329);
+  color: rgb(248, 159, 159);
 }
 
 
@@ -36,7 +37,7 @@ color: rgb(255, 0, 0);
 }
 
 #moving {
-  text-shadow: 20px 20px rgba(0, 0, 0, 0.178);
+  text-shadow: 20px 20px rgba(0, 0, 0, 0.185);
   font-family: 'Lavishly Yours', cursive;
 
   color: rgb(0, 0, 0);
@@ -75,7 +76,7 @@ p {
 }
 
 h3 {
-text-shadow: 20px 20px rgba(0, 0, 0, 0.178);
+text-shadow: 20px 20px rgba(0, 0, 0, 0.425);
 font-family: 'Lavishly Yours', cursive;
 }
 
@@ -87,11 +88,11 @@ grid-row: 3/3;
 }
 
 #causes {
-text-shadow: 20px 20px rgba(68, 45, 19, 0.178);
+text-shadow: 20px 20px rgba(0, 0, 0, 0.24);
 font-family: 'Lavishly Yours', cursive;
 
 text-align: center;
-color: rgb(255, 0, 0);
+color: rgb(204, 127, 127);
 }
 
 
