--- a/week7/Pride/pride.css
+++ b/week7/Pride/pride.css
@@ -128,6 +128,8 @@ h3 {
 #moving {
   padding: .8%;
   margin-left: 4%;
+
+  font-size: 24px;
 }
 
 ul {
@@ -207,6 +209,8 @@ h3 {
 #moving {
   padding: .8%;
   margin-left: 4%;
+
+  font-size: 45px;
 }
 
 ul {
