--- a/week7/Voting Rights copy 5/vote.css
+++ b/week7/Voting Rights copy 5/vote.css
@@ -130,6 +130,8 @@ h3 {
 #moving {
   padding: .8%;
   margin-left: 4%;
+
+  font-size: 24px;
 }
 
 ul {
@@ -209,6 +211,8 @@ h3 {
 #moving {
   padding: .8%;
   margin-left: 4%;
+
+  font-size: 45px;
 }
 
 ul {
